test/functions/whereClauses/whereClauseNonParamGeneric.good
whereClauseNonParamGeneric.chpl:1: In function 'foo':
whereClauseNonParamGeneric.chpl:1: error: invalid where clause
  whereClauseNonParamGeneric.chpl:1: called as foo(x: int(64), y: int(64))
